# functional_programming_lab1

./: Makefile  README.md  dune-project  lab1.opam
.github/workflow/: ci-cd.yml
.github/workflows/: ci-cd.yml
_build/: .db  .digest-db  log
_build/default/: lab1.dune-package  lab1.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: lab1.cma  lab1.cmxa  lab1.cmxs
_build/default/lib/.lab1.objs/byte/: lab1.cmi  lab1.cmo  lab1.cmt
_build/default/lib/.lab1.objs/native/: lab1.cmx
_build/default/lib/.merlin-conf/: lib-lab1
_build/default/test/.merlin-conf/: exe-test_lab1
_build/default/test/.test_lab1.eobjs/byte/: dune__exe__Test_lab1.cmi  dune__exe__Test_lab1.cmo  dune__exe__Test_lab1.cmt  dune__exe__Test_lab1.cmti
_build/default/test/.test_lab1.eobjs/native/: dune__exe__Test_lab1.cmx
_build/install/default/lib/lab1/: META  dune-package  opam
lib/: dune
lib/task2/: dune  task2.ml
lib/task29/: dune  task29.ml
python/: task2.py  task29.py
test/: dune  test_lab1.ml  test_task2.ml  test_task29.ml
